Cascading Change Log

2.1.3 [unreleased]

  Fix for c.p.a.AggregateBy not honoring the global system property threshold value if not overridden on the ctor.

  Fix for NPE if c.f.FlowProcess returns null config.

  Fixed issue where a c.f.FlowStep would attempt to detect if it should be skipped regardless of whether the "runID"
  had been set or not on the c.f.Flow enabling restartable flows.

2.1.2

  Fixed issue where c.f.FlowProcess#openForWrite on Hadoop would re-use the existing o.a.h.m.OutputCollector instance
  as that used in the current task.

  Fixed issue where fetching remote Hadoop counter values could block indefinitely. Fetching remote counters is now
  serialized across jobs to prevent deadlocks inside the Hadoop API and counter values are now cached with a final
  refresh on job completion.

  Fixed issue where NPE could be thrown by c.s.CascadingStats#getCounterValue if given counter had no value.

2.1.1

  Fixed issue where c.s.h.TextDelimited would not honor charsetName.

  Fixed issue where c.t.BaseTemplateTap would lose parent fields if they were declared as Fields.ALL.

  Fixed issue where c.t.Fields#append would not include current Fields instance when appending an array of Fields
  instances.

  Fixed issue where subsequent c.p.Merge pipes in a pipeline path would obscure prior Merges preventing a c.t.Tap
  insertion during planning resulting in a missing Tap configuration resource property.

  Fixed NPE with c.s.l.TextDelimited when line after header was null.

  Fix for c.s.u.DelimitedParser not fully honoring the default strict parsing policy. This resolution may cause
  some text delimited files to fail if they have arbitrary numbers of fields.

  Added quote and delimiter getters to c.s.l.TextDelimited and c.s.h.TextDelimited.

  Fixed issue where a c.f.FlowStep being skipped was not considered successful after 2.0.7 merge.

2.1.0

  Fixed issue where c.p.a.Coerce would coerce a null value to 0 if the coerce type was a j.l.Number